--- a/css/styles.css
+++ b/css/styles.css
@@ -26,9 +26,10 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
   color: var(--main-color);
   background-color: var(--secondary-color);
+
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
 }
@@ -80,7 +81,9 @@ h3 {
 
 .logo {
   margin-right: 93px;
+
   color: var(--hover-blue-color);
+
   font-family: 'Raleway';
   font-size: 26px;
   line-height: 1.19;
@@ -95,6 +98,7 @@ h3 {
 .header-nav,
 .header-contacts {
   display: flex;
+
   font-weight: 500;
   line-height: 1.43;
   letter-spacing: 0.02em;
@@ -128,6 +132,7 @@ h3 {
   color: var(--hover-blue-color);
 }
 
+/* Нижня межа шапки */
 .header {
   border-bottom: solid 1px var(--header-border-color);
 }
@@ -137,8 +142,10 @@ h3 {
 .section.hero {
   padding-top: 200px;
   padding-bottom: 200px;
+
   background-color: var(--footer-bcg);
   color: var(--secondary-color);
+
   text-align: center;
 }
 
@@ -168,6 +175,7 @@ h3 {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+
   cursor: pointer;
 
   border: none;
@@ -204,6 +212,7 @@ h3 {
   margin-bottom: 10px;
 
   color: var(--header-color);
+
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -221,7 +230,7 @@ h3 {
   flex-basis: calc((100% - 90px) / 4);
 }
 
-/* Секція команди */
+/* Секції команди та особливостей*/
 
 .work-title,
 .team-title {
@@ -231,11 +240,12 @@ h3 {
 
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
 }
 
-.work .list {
+.work .list,
+.team .list {
   gap: 30px;
 }
 
@@ -245,10 +255,6 @@ h3 {
 
 .team {
   background-color: var(--secondary-bcg);
-}
-
-.team .list {
-  gap: 30px;
 }
 
 .team-item {
@@ -268,11 +274,12 @@ h3 {
   margin-bottom: 10px;
 
   color: var(--header-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
 }
 
 .team-text {
@@ -302,6 +309,7 @@ h3 {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+
   cursor: pointer;
 
   border-radius: 4px;
@@ -355,7 +363,7 @@ h3 {
 
 .portfolio-text {
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.875;
 }
 
 /* 
